# recipe_ai_app

./: .env.sample  .gitignore  README.md  README_STRIPE.md  pyproject.toml  requirements.txt
doc/: API.md  ER.md
src/: api_models.py  create-checkout-session.py  create_stripe.py  db_models.py  db_setup.py  get_conn.py  main.py  utils.py
src/api/auth/: index.py
src/api/payments/: index.py
src/api/recipe/: index.py
src/tests/: test_db_models.py  test_main.py
terraform/: main.tf  variables.tf
