[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "azure-identity>=1.25.0",
    "azure-keyvault-secrets>=4.10.0",
    "azure-storage-blob>=12.26.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.118.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.43",
    "stripe>=13.0.1",
    "uvicorn>=0.37.0",
]
